--- a/.env
+++ b/.env
@@ -41,3 +41,7 @@ DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+
+###> symfony/loco-translation-provider ###
+#LOCO_DSN=loco://API_KEY@default
+###< symfony/loco-translation-provider ###
