--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,13 +1,15 @@
 framework:
-    default_locale: en
+    default_locale: fr
     translator:
         default_path: '%kernel.project_dir%/translations'
         fallbacks:
             - en
-#        providers:
+        providers:
 #            crowdin:
 #                dsn: '%env(CROWDIN_DSN)%'
 #            loco:
 #                dsn: '%env(LOCO_DSN)%'
+#                domains: ['message']
+#                locales: ['en', 'fr']
 #            lokalise:
 #                dsn: '%env(LOKALISE_DSN)%'
